<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="jp.couplink.app.fragment.NetworkErrorFragment"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/splashImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/not_displayed_msg"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/network_error_meg"
            android:layout_marginBottom="40dp"
            android:gravity="center" />

        <Button
            android:id="@+id/buttonReAccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/re_access"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorPrimaryText" />
    </LinearLayout>

    <TextView
        android:id="@+id/accessCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:text="TextView" />

</RelativeLayout>
