<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/maching_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/main_fragment_gap">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.srx.widget.PullToLoadView

                android:id="@+id/fragment_matched_user_PullToLoadView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/receive_like_img"></com.srx.widget.PullToLoadView>

        </RelativeLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_empty_Matched"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/linearLayout"
            android:layout_width="200.0dp"
            android:layout_height="wrap_content"

            >

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/pic1"
                app:border_color="@android:color/transparent"
                app:border_width="3dp" />

            <ImageView
                android:layout_width="60.0dp"
                android:layout_height="60.0dp"
                android:layout_weight="1"
                android:src="@drawable/message_event_list_matched_icon" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/images_man"
                app:border_color="@android:color/transparent"
                app:border_width="3dp" />
        </LinearLayout>

        <TextView
            android:textSize="13.0sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/text_red"
            android:id="@+id/title_event_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_list_title_1" />

        <TextView
            android:textSize="13.0sp"
            android:text="@string/event_list_title_2"
            android:id="@+id/title_event_2"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@android:color/white"
            android:id="@+id/btn_find_event"
            android:textSize="16.0sp"
            android:gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_button"
            android:text="@string/btn_find_event"
            android:layout_width="match_parent"
            android:layout_height="@dimen/txt_height_medium" />

    </LinearLayout>



</RelativeLayout>
