<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eff6fc">

    <include
        android:id="@+id/toolbar_coin_purchase"
        layout="@layout/actionbar_coin_purchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_coin_purchase">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eff6fc">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ic_coin_red" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="27dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="35dp"
                    android:text="@string/coin_purchase_title1"
                    android:textColor="#e5838b"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="23dp"
                android:text="@string/coin_purchase_title2"
                android:textColor="@android:color/black"
                android:textSize="16dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"></FrameLayout>

            <Button
                android:id="@+id/btn_coin_100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@mipmap/btn_coin_100" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@mipmap/btn_coin_50" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@mipmap/btn_coin_10" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@mipmap/btn_coin_30" />

            <Button
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_edittext_gray"
                android:text="リストア"
                android:textColor="#9b9b9b"
                android:textSize="20dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/rectangle4"
                    android:gravity="center"
                    android:paddingLeft="17dp"
                    android:paddingRight="17dp"
                    android:paddingTop="45dp"
                    android:text="@string/coin_purchase_text"
                    android:textColor="@android:color/black"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="Couplinkコインでできること"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="18dp"
                    android:textStyle="bold" />


            </FrameLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
